--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -19,10 +19,10 @@ html(lang="en-US")
             footer.page-footer
                 .page-footer--copyright &copy; 2017 Doula Cooperative of Rochester NY
                 a(href="contact-us").page-footer--contact Contact Us
-        script(src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous")
-        script(src="js/index.js")
+        script(defer src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous")
+        script(defer src="js/index.js")
         script.
             window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
             ga('create', 'UA-86099056-1', 'auto');
             ga('send', 'pageview');
-        script(src="https://www.google-analytics.com/analytics.js")
+        script(async src="https://www.google-analytics.com/analytics.js")
