--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -5,6 +5,7 @@ html(lang="en-US")
         link(href="css/main.css", rel="stylesheet")
         link(href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Libre+Franklin", rel="stylesheet")
         meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
+        link(rel="manifest", href="manifest.json")
         title Doula Cooperative of Rochester NY - Labor Support for Pregnant Women
     body        
         div(id="main", class="container")
