Adding new doula

--- a/src/templates/the-doulas.pug
+++ b/src/templates/the-doulas.pug
@@ -51,4 +51,4 @@ block main
                         .website
                             svg(class="icon")
                                 use(xlink:href="#website-icon")
-                            span #[a(href="http://" + doula.website) #{doula.website}]
+                            span #[a(href="http://" + doula.website, rel="noopener") #{doula.website}]
