--- a/src/templates/partials/_doulas.pug
+++ b/src/templates/partials/_doulas.pug
@@ -65,6 +65,14 @@
             "website": "www.everymotherdeservessupport.com",
             "phone": "585-269-8946"
         },
+         "Claire Labrosa": {
+            "name": "claire-labrosa",
+            "credentials": "",
+            "bio": "Claire is a birth doula and childbirth educator. She is passionate about birth, and seeks to support all individuals and families as they follow their journeys in birth and parenting. Claire values diversity and respect for all people. She seeks to support those on their journey in pregnancy, birth, and beyond so they feel prepared, cared for, and empowered throughout. Claire believes everyone can have a birth that makes them feel stronger than they ever did before, and she hopes to help them achieve that.",
+            "email":  "clabrosa@gmail.com",
+            "website": "",
+            "phone": ""
+        },
         "Cheryl Johnson": {
             "name": "cheryl-johnson",
             "credentials": "CD(DONA)",
