updating PWA score

--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -3,9 +3,9 @@ html(lang="en-US")
     head
         meta(charset="utf-8")
         link(href="css/main.css", rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Libre+Franklin", rel="stylesheet")
-        meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
+        meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="manifest", href="manifest.json")
+        meta(name="theme-color", content="#2F3BA2")
         title Doula Cooperative of Rochester NY - Labor Support for Pregnant Women
     body        
         div(id="main", class="container")
@@ -20,6 +20,7 @@ html(lang="en-US")
             footer.page-footer
                 .page-footer--copyright &copy; 2017 Doula Cooperative of Rochester NY
                 a(href="contact-us").page-footer--contact Contact Us
+        script(defer src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js")
         script(defer src="js/index.js")
         script.
             window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
