--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -1,18 +1,10 @@
 /// Serif font family
 /// @type List
-$heading-font-stack: 'Libre Franklin', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
+$heading-font-stack: 'Libre Franklin', 'Helvetica', 'Arial', sans-serif !default;
 
 /// Regular font family
 /// @type List
 $text-font-stack: 'Libre Baskerville', 'Times New Roman', serif !default;
-
-/// Code (monospace) font family
-/// @type List
-$code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
-
-
-
-
 
 /// Copy text color
 /// @type Color
@@ -38,31 +30,14 @@ $mid-grey: rgb(153, 153, 153) !default;
 /// @type Color
 $dark-grey: rgb(68, 68, 68) !default;
 
-
-
-
-
 /// Container's maximum width
 /// @type Length
 $max-width: 64em !default;
 
-
-
-
-
 /// Breakpoints map
 /// @prop {String} keys - Keys are identifiers mapped to a given length
 /// @prop {Map} values - Values are actual breakpoints expressed in ems
-$breakpoints: (
-  'mobile': 26em,
-  'tablet': 48em,
-  'desktop': 64em,
-) !default;
-
-
-
-
-
+$breakpoints: ('mobile': 26em, 'tablet': 48em, 'desktop': 64em) !default;
 
 /// Relative or absolute URL where all assets are served from
 /// @type String
