--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -3,10 +3,8 @@ html(lang="en-US")
     head
         meta(charset="utf-8")
         link(href="css/main.css", rel="stylesheet")
-        meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
+        meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=5")
         link(rel="manifest", href="manifest.json")
-        link(rel="preload" as="font" href="fonts/libre-baskerville.woff2" type="font/woff2" crossorigin)
-        link(rel="preload" as="font" href="fonts/libre-franklin.woff2" type="font/woff2" crossorigin)
         meta(name="theme-color" content="#2F3BA2")
         title Doula Cooperative of Rochester NY - Labor Support for Pregnant Women
     body        
