Trying to fix relative paths in fonts

--- a/src/stylesheets/base/_fonts.scss
+++ b/src/stylesheets/base/_fonts.scss
@@ -3,9 +3,9 @@
 // -----------------------------------------------------------------------------
 @font-face {
   font-family: 'Libre Franklin';
-  src: url("/fonts/libre-franklin.woff2") format("woff2");
+  src: url("../fonts/libre-franklin.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Libre Baskerville';
-  src: url("/fonts/libre-baskerville.woff2") format("woff2");
+  src: url("../fonts/libre-baskerville.woff2") format("woff2");
 }
