--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -6,8 +6,8 @@ html(lang="en-US")
         meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=5")
         link(rel="manifest", href="manifest.json")
         meta(name="theme-color" content="#2F3BA2")
-        link(rel="preload" as="font" href="fonts/libre-franklin.woff2" type="font/woff2" crossorigin)
-        link(rel="preload" as="font" href="fonts/libre-baskerville.woff2" type="font/woff2" crossorigin)
+        //- link(rel="preload" as="font" href="fonts/libre-franklin.woff2" type="font/woff2" crossorigin)
+        //- link(rel="preload" as="font" href="fonts/libre-baskerville.woff2" type="font/woff2" crossorigin)
         title Doula Cooperative of Rochester NY - Labor Support for Pregnant Women
     body        
         div(id="main", class="container")
