--- a/src/templates/partials/_mobile-nav.pug
+++ b/src/templates/partials/_mobile-nav.pug
@@ -49,6 +49,6 @@ nav.mobile-nav.hidden
             a(href='join-us').mobile-nav--link How to Join
             a(href='monthly-meetings').mobile-nav--link Monthly Meetings
             a(href='steering-committee').mobile-nav--link Steering Committee
-            a(href='#').mobile-nav--link Members Only
+            a(href='members-only').mobile-nav--link Members Only
     .mobile-nav--top-level
         a(href="contact-us").mobile-nav--link Contact Us
