Update Kathleen Mungolo, remove SSR functionality

--- a/src/templates/partials/_doulas.pug
+++ b/src/templates/partials/_doulas.pug
@@ -173,9 +173,9 @@
             "name": "kathleen-mugnolo",
             "credentials": "",
             "bio": "Kathleen has been passionately providing birth and postpartum care to families for  10 years.  She believes that healing the way women give birth will mend the world. Kathleen brings a solid foundation of plant wisdom to her practice, having completed her first herbal  apprenticeship at Heartstone Center For Earths Essentials in 2003 and is currently working with Dr. Aviva Romm studying Herbal Medicine for Woman.  She believes in a holistic approach when caring for the mother/baby/family unit and that the needs of the whole are complementary. Kathleen is driven by the honor of witnessing a woman embody her full self during birth.",
-            "email":  "peacefuldoula@gmail.com",
-            "website": "",
-            "phone": ""
+            "email":  "quantumbirthservices@gmail.com",
+            "website": "www.quantumbirthservices.com",
+            "phone": " 585-507-7991"
         },
         "Valarie Welsh": {
             "name": "valarie-welsh",
