Updating doula list with sarah's info

--- a/src/templates/partials/_doulas.pug
+++ b/src/templates/partials/_doulas.pug
@@ -97,6 +97,14 @@
             "website": "",
             "phone": "(808)268-3973"
         },
+        "Sarah Ozimek": {
+            "name": "sarah-ozimek",
+            "credentials": "",
+            "bio": "Sarah found her calling to birth work after experiencing first-hand the benefits of a doula’s presence during the birth of her daughter in 2015. She believes every mother deserves access to all the information possible to experience a positive birth, and to be treated like a goddess! Sarah is honored to share birth memories with many families and looks forward to helping make your family's transition to parenthood as peaceful as possible.  As a birth and postpartum doula who is deaf, Sarah communicates in both English & ASL and enjoys working with the Deaf Community.",
+            "email":  "sarah.e.ozimek@gmail.com",
+            "website": "",
+            "phone": "484-716-8065"
+        }
         "Jenessa Pak": {
             "name": "janessa-pak",
             "credentials": "",
