--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -3,8 +3,8 @@ html(lang="en-US")
     head
         meta(charset="utf-8")
         link(href="css/main.css", rel="stylesheet")
-        meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=5")
-        link(rel="manifest", href="manifest.json")
+        meta(name="viewport", content="width=device-width, initial-scale=1")
+        link(rel="manifest", href="manifest.webmanifest", type="application/manifest+json")
         meta(name="theme-color" content="#2F3BA2")
         //- link(rel="preload" as="font" href="fonts/libre-franklin.woff2" type="font/woff2")
         //- link(rel="preload" as="font" href="fonts/libre-baskerville.woff2" type="font/woff2")
@@ -22,7 +22,7 @@ html(lang="en-US")
             footer.page-footer
                 .page-footer--copyright &copy; 2017 Doula Cooperative of Rochester NY
                 a(href="contact-us").page-footer--contact Contact Us
-        script(defer src="js/index.js")
+        script(defer src="js/index.js", type="text/javascript")
         script.
             window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
             ga('create', 'UA-86099056-1', 'auto');
