Update to Jane's listing, added Bridget's photo

--- a/src/templates/partials/_doulas.pug
+++ b/src/templates/partials/_doulas.pug
@@ -57,6 +57,14 @@
             "website": "",
             "phone": "585-739-9093"
         },
+        "Bridget Strub": {
+            "name": "bridget-strub",
+            "credentials": "CD(DONA)",
+            "bio": "Bridget is passionate about supporting women and their families and being a catalyst for peace in pregnancy, birth and parenthood. Her calm presence, gentle approach and steady strength offer the support needed to engage with birth as an empowering and fulfilling experience. She has been a doula since 2015 and has supported women through medicated, unmedicated, VBAC and cesarean births. Bridget has been DONA certified and owner of Wildflower Birth Support since 2016. She has a thirst for knowledge and continually seeks out educational opportunities to deepen her knowledge and expand the extent of her evidence-based support.",
+            "email":  "bridgetthedoula@gmail.com",
+            "website": "www.wildflowerbirth.co/",
+            "phone": "585-880-5387"
+        },
         "Noelle Hitchcock": {
             "name": "noelle-hitchcock",
             "credentials": "",
@@ -129,12 +137,12 @@
             "website": "www.bbcroc.com",
             "phone": ""
         },
-        "Janice (Jane) Leverenz": {
+        "Jane Leverenz": {
             "name": "jane-leverenz",
             "credentials": "CD(DONA)",
             "bio": "Jane has a passion to help educate, empower, and support women and their families during their birth journey. She has been working as a birth doula since January 2014. She became passionate about childbirth after her first baby was born in 2007. She has enthusiastically pursued greater knowledge and birth experience ever since! Jane is an active, loving and empathetic woman. Wife to a wonderful guy and mother to four amazing, energetic children. She also loves the Rochester birth community dearly!",
             "email":  "leverenz_janice@yahoo.com",
-            "website": "",
+            "website": "www.threesistersdoulacare.com",
             "phone": ""
         },
         "Julia M. Sittig": {
