--- a/src/templates/partials/_doulas.pug
+++ b/src/templates/partials/_doulas.pug
@@ -25,14 +25,6 @@
             "website": "www.spiritorganic.net",
             "phone": "585-746-4682"
         },
-        "Nella Goho": {
-            "name": "nella-goho",
-            "credentials": "CD(DONA), LCCE",
-            "bio": "Nella thrives on her passion for all things birth related. Birth and all it involves has not only motivated Nella but inspired her to turn her passion into a profession. She completed her training as a Bradley Childbirth Instructor 2012. She is certified as a DONA International Doula as well as a Lamaze Childbirth Educator. Nella serves on the Doula Cooperative Board, the Rochester Area Birth Network Board, and the PCC LEAH Homeschool Cooperative Board. In her spare time, Nella enjoys spending time with her family, Netflix binges, mama night outs, video game play and sitting down with a good soul quenching book.",
-            "email":  "passionatedoula@gmail.com",
-            "website": "www.bbcroc.com",
-            "phone": "585-820-7062"
-        },
         "Gaila Harriff": {
             "name": "gaila-harriff",
             "credentials": "CD(DONA), PCD (DONA), CLC (HEALTHY CHILD)",
@@ -40,23 +32,7 @@
             "email":  "gharriff@gmail.com",
             "website": "",
             "phone": "585-414-8947"
-        },
-        "Erin Hegeman": {
-            "name": "erin-hegeman",
-            "credentials": "",
-            "bio": "Erin is a birth doula and believer in the process of birth. She has confidence and trust that a woman's body can and will birth a baby in the way that was meant for them as individuals. She hopes to empower women to learn about their choices in childbirth.  Erin has trained in Hypnobirthing and is certified in Rebozo for childbirth. Her journey on this path began with the birth at home of her first son in 2009. She believes every woman should have access to the physical and emotional support of a doula if they desire.",
-            "email":  "erin.hegeman.doula@gmail.com",
-            "website": "www.erinhegeman.com",
-            "phone": ""
-        },
-        "Shannon Hess": {
-            "name": "shannon-hess",
-            "credentials": "",
-            "bio": "Shannon is passionate about supporting women through transformative times in their lives. In 2014, she completed the DONA International birth doula training after becoming infatuated with the process and power of birth. In January of 2016, Shannon had her first child and experienced firsthand how infinitely encouraging the presence of a doula could be, and hopes to share that with as many women as she can. Shannon also practices herbal medicine and has completed a number of apprenticeships with incredible herbalists. She is currently working towards her certification as a women’s herbal educator.",
-            "email":  "smlphess@gmail.com",
-            "website": "",
-            "phone": "585-739-9093"
-        },
+         },   
         "Bridget Strub": {
             "name": "bridget-strub",
             "credentials": "CD(DONA)",
@@ -108,7 +84,7 @@
         "Sarah Ozimek": {
             "name": "sarah-ozimek",
             "credentials": "",
-            "bio": "Sarah found her calling to birth work after experiencing first-hand the benefits of a doula’s presence during the birth of her daughter in 2015. She believes every mother deserves access to all the information possible to experience a positive birth, and to be treated like a goddess! Sarah is honored to share birth memories with many families and looks forward to helping make your family's transition to parenthood as peaceful as possible.  As a birth and postpartum doula who is deaf, Sarah communicates in both English & ASL and enjoys working with the Deaf Community.",
+            "bio": "Sarah is a labor and postpartum doula who believes every family deserves an informed and respectful birth experience. She admires the strength of a woman before, during and after childbirth, and encourages having a well-rounded support team to aid the journey to parenthood. As a doula who is deaf and knows sign language, she feels honored to be able to share birth memories with families who communicate in English and/or ASL. She enjoys hiking with her family, swimming in lakes & exploring all the outdoor beauty Upstate NY has to offer throughout all four seasons.",
             "email":  "sarah.e.ozimek@gmail.com",
             "website": "",
             "phone": "484-716-8065"
@@ -120,14 +96,7 @@
             "email":  "jenessampak@gmail.com",
             "website": "",
             "phone": "585-880-3710"
-        },
-        "Dalia Rodriguez-Aponte": {
-            "name": "dalia-rodriguez-aponte",
-            "credentials": "",
-            "bio": "Dalia is a Certified Birth and Postpartum Doula who believes in birth and in the woman’s ability to give birth. For her, this is a sacred and transformative time in which it is possible to be reborn as an individual and parent. She understands the fears that arise during this process and will be honored to serve as a support. Dalia has taken other courses and trainings that compliment her work and offer additional services like the Sobada Maya (Maya Abdominal Therapy) for pre-pregnancy and/or postpartum, and Placental Work (prints, encapsulations, tincture, balm). Dalia speaks English and Spanish.",
-            "email":  "dalia@bbcroc.com",
-            "website": "www.bbcroc.com",
-            "phone": "585-789-0596"
+       
         },
         "Laura Schwartz": {
             "name": "laura-schwartz",
@@ -156,10 +125,10 @@
         "Kay Slattery": {
             "name": "kay-slattery",
             "credentials": "CD(DONA)",
-            "bio": "Kay believes that birth is a normal, yet spiritual beginning to life, and that a healthy woman’s body is designed to nourish a natural birth, with little or no medical intervention.  Although there are times when a medical procedure may be necessary to bring about a positive outcome for mother and baby, it does not have to diminish a rewarding birth experience. She believes respecting the mother’s preferences for the kind of birth she imagines is key to bringing about a positive birth experience.  Kay is DONA certified and has served as a doula since 2006.",
-            "email":  "kslatt@rochester.rr.com",
+            "bio": "Kay’s love for the birth process began in 1976 with the birth of her first child.  She has been a DONA International Certified Birth Doula since 2008 and is a trained Lamaze Childbirth Educator, through Passion for Birth. Kay believes that by respecting the mother’s preferences for the kind of birth she imagines, encouraging each mother to draw on the power within her, and knowing how her body is designed to give birth, is key to a rewarding birth experience.   Kay brings a calm, nurturing presence to each family she supports, and with her experience she works well with other members of the birth team.  She has 4 adult children, and has been the doula for 4 of her 7 grandchildren.",
+            "email":  "keslatt17@gmail.com",
             "website": "",
-            "phone": ""
+            "phone": "585-703-3724"
         },
         "Mindy Class": {
             "name": "mindy-class",
@@ -189,17 +158,9 @@
             "name": "kathleen-mugnolo",
             "credentials": "",
             "bio": "Kathleen has been passionately providing birth and postpartum care to families for  10 years.  She believes that healing the way women give birth will mend the world. Kathleen brings a solid foundation of plant wisdom to her practice, having completed her first herbal  apprenticeship at Heartstone Center For Earths Essentials in 2003 and is currently working with Dr. Aviva Romm studying Herbal Medicine for Woman.  She believes in a holistic approach when caring for the mother/baby/family unit and that the needs of the whole are complementary. Kathleen is driven by the honor of witnessing a woman embody her full self during birth.",
-            "email":  "quantumbirthservices@gmail.com",
-            "website": "www.quantumbirthservices.com",
+            "email":  "kathleenamugnolo@gmail.com",
+            "website": "www.kathleenmugnolo.com",
             "phone": " 585-507-7991"
-        },
-        "Valarie Welsh": {
-            "name": "valarie-welsh",
-            "credentials": "CD(DONA), LCCE, CPST",
-            "bio": "Valarie is a certified doula supporting births for over six years. She’s president of the Rochester Doula Cooperative, a Lamaze Certified Childbirth Educator (LCCE), and a certified child passenger safety seat technician. Valarie has experience supporting Cesarean, VBAC, multiples, and home births, but most importantly has a deep love and respect for the transforming power of birth and how powerful a woman’s own wisdom can be. Valarie believes the sacrament of birth belongs with the family and welcomes a conversation to determine how she can best support you in the choices ahead.",
-            "email":  "info@birthmarkdoula.com",
-            "website": "www.birthmarkdoula.com",
-            "phone": "585-943-8655"
         },
         "Karen Welton": {
             "name": "karen-welton",
@@ -217,12 +178,44 @@
             "website": "",
             "phone": "585-503-0358"
         },
-        "Nikki Covert": {
-            "name": "nikki-covert",
+        "Leslie Gallea" {
+            "name": "leslie-gallea",
             "credentials": "",
-            "bio": "I believe in the empowerment of women through their birth experience. I have a deep trust in the birth process and value every families individual birth path. My passion for birth began with my birth doula who inspired me during my own VBAC (vaginal birth after cesarean) in 2011. Realizing throughout my VBAC, and several pregnancies thereafter, just how important the role of a doula is, I set out in April 2016 on a journey to become a certified DONA birth doula. I approach my work and continuing education as doula with compassion, empathy, and my own real world experience.  I embrace all the joy and fears that surface throughout a woman's birth journey and grateful for each birth I'm invited to.",
-            "email":  "Nikki.covert@gmail.com",
+            "bio": "Leslie is a trained birth doula with DONA International and is working toward completing her certification this year.  Founder of the non-profit Growing Eden's Education, which specializes in low-cost doula services for all women, Leslie is passionate about every woman being supported by a doula regardless of income eligibility.  Leslie's doula journey began nine years ago with the birth of her first child, which ignited the spark to embrace women as they experience their own birth stories.  Leslie believes every woman is unique and capable of deciding what is true for them before, during and after the birth of their child(ren). Leslie is honored to be part of your birth story and looks forward to supporting you and your family. ",
+            "email": "leslie.gallea@outlook.com",
+            "website": "growingedensed@gmail.com",
+            "phone": "585-483-0135"
+        },
+        "Wanda Ayala" {
+            "name": "wanda-ayala",
+            "credentials": "",
+            "bio": "Wanda Ayala is a Certified Birth and PostPartum Doula. She believes that empowering  families of their pregnancy and delivery makes a huge difference in coping with the incredible transition into parenthood. Wanda is also a Registered Nurse who understands that serving, supporting, comforting and caring  decreases the fears and eases labor. For her, a doula plays a unique role helping parents achieve the birth they dreamed of. She states it’s a privilege and an honor being part of a pregnancy, birth and postpartum care team. Wanda speaks Spanish and English.",
+            "email": "wiaya33@gmail.com",
             "website": "",
-            "phone": "239-247-2580"
-        }        
-    }
+            "phone": "787-410-1988",
+        },
+        "Kerela Jones" {
+            "name": "kerela-jones",
+            "credentials": "",
+            "bio": "Kerela is a certified Holistic Birth Doula through The Matrona. As a mother of two grown sons, Kerela has been passionate about natural, physiological childbirth since the birth of her first son 29 years ago. Kerela truly believes in the natural process of birth and that a woman’s body holds the knowledge, wisdom and instinct to birth.   You have the right to know your choices and make informed decisions during this transformative time. Sometimes you just need a little reassurance along the way and a guide to keep you on the path to the birth that is right for you!",
+            "email": "kerelajones@gmail.com",
+            "website": "growingedensed@gmail.com",
+            "phone": "585-784-0291"
+        },
+        "Jennie Kieffer": {
+            "name": "jennie-kieffer",
+            "credentials": "",
+            "bio": "Jennie is a birth doula, postpartum doula, and certified lactation counselor.  She is also a photographer specializing in maternity and birth sessions.  Jennie understands the importance of a well supported birth and postpartum experience, and works hard to facilitate this with every client.  Jennie is working towards certifications with DONA, International, and continues to learn about her work at every available opportunity.  She believes that the birth and postpartum experience is what lays the foundation for every family and is passionate about providing the best possible care to her clients.",
+            "email":  "Jmkdoula@gmail.com",
+            "website": "",
+            "phone": "585-397-6805"
+        },
+         "Tamara Albert" {
+            "name": "tamara-albert",
+            "credentials": "CD(DONA), LCCE",
+            "bio": "Tamara is passionate to help women have the kind of birth they desire.  The value of labor support in the form of a loving husband (or coach) and a doula is immeasurable.   Tamara has been a certified doula with DONA (Doulas of North America) since 2001, a Lamaze Certified Childbirth Educator (LCCE) since 2002, and has attended over 100 births - and counting!  Additionally, she has a Bachelor of Science from Roberts Wesleyan College.  Tamara is blessed to have an amazing husband and five incredible children.  She absolutely LOVES working with pregnant couples!",
+            "email": "tamaralynn2@outlook.com",
+            "website": "www.tamara-albert.com",
+            "phone": "585-503-7984"
+         }
+         }
