--- a/src/templates/partials/_doulas.pug
+++ b/src/templates/partials/_doulas.pug
@@ -178,4 +178,44 @@
                 "website": "",
                 "phone": "585-503-0358"
             },
+            "Leslie Gallea" {
+                "name": "leslie-gallea",
+                "credentials": "",
+                "bio": "Leslie is a trained birth doula with DONA International and is working toward completing her certification this year.  Founder of the non-profit Growing Eden's Education, which specializes in low-cost doula services for all women, Leslie is passionate about every woman being supported by a doula regardless of income eligibility.  Leslie's doula journey began nine years ago with the birth of her first child, which ignited the spark to embrace women as they experience their own birth stories.  Leslie believes every woman is unique and capable of deciding what is true for them before, during and after the birth of their child(ren). Leslie is honored to be part of your birth story and looks forward to supporting you and your family. ",
+                "email": "leslie.gallea@outlook.com",
+                "website": "growingedensed@gmail.com",
+                "phone": "585-483-0135"
+            },
+            "Wanda Ayala" {
+                "name": "wanda-ayala",
+                "credentials": "",
+                "bio": "Wanda Ayala is a Certified Birth and PostPartum Doula. She believes that empowering  families of their pregnancy and delivery makes a huge difference in coping with the incredible transition into parenthood. Wanda is also a Registered Nurse who understands that serving, supporting, comforting and caring  decreases the fears and eases labor. For her, a doula plays a unique role helping parents achieve the birth they dreamed of. She states it’s a privilege and an honor being part of a pregnancy, birth and postpartum care team. Wanda speaks Spanish and English.",
+                "email": "wiaya33@gmail.com",
+                "website": "",
+                "phone": "787-410-1988",
+            },
+            "Kerela Jones" {
+                "name": "kerela-jones",
+                "credentials": "",
+                "bio": "Kerela is a certified Holistic Birth Doula through The Matrona. As a mother of two grown sons, Kerela has been passionate about natural, physiological childbirth since the birth of her first son 29 years ago. Kerela truly believes in the natural process of birth and that a woman’s body holds the knowledge, wisdom and instinct to birth.   You have the right to know your choices and make informed decisions during this transformative time. Sometimes you just need a little reassurance along the way and a guide to keep you on the path to the birth that is right for you!",
+                "email": "kerelajones@gmail.com",
+                "website": "growingedensed@gmail.com",
+                "phone": "585-784-0291"
+            },
+            "Jennie Kieffer": {
+                "name": "jennie-kieffer",
+                "credentials": "",
+                "bio": "Jennie is a birth doula, postpartum doula, and certified lactation counselor.  She is also a photographer specializing in maternity and birth sessions.  Jennie understands the importance of a well supported birth and postpartum experience, and works hard to facilitate this with every client.  Jennie is working towards certifications with DONA, International, and continues to learn about her work at every available opportunity.  She believes that the birth and postpartum experience is what lays the foundation for every family and is passionate about providing the best possible care to her clients.",
+                "email":  "Jmkdoula@gmail.com",
+                "website": "",
+                "phone": "585-397-6805"
+            },
+            "Tamara Albert" {
+                "name": "tamara-albert",
+                "credentials": "CD(DONA), LCCE",
+                "bio": "Tamara is passionate to help women have the kind of birth they desire.  The value of labor support in the form of a loving husband (or coach) and a doula is immeasurable.   Tamara has been a certified doula with DONA (Doulas of North America) since 2001, a Lamaze Certified Childbirth Educator (LCCE) since 2002, and has attended over 100 births - and counting!  Additionally, she has a Bachelor of Science from Roberts Wesleyan College.  Tamara is blessed to have an amazing husband and five incredible children.  She absolutely LOVES working with pregnant couples!",
+                "email": "tamaralynn2@outlook.com",
+                "website": "www.tamara-albert.com",
+                "phone": "585-503-7984"
+            }
         }
